--- a/Resources/Prototypes/Entities/Structures/Doors/Shutter/blast_door.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Shutter/blast_door.yml
@@ -73,6 +73,8 @@
   - type: Penetratable # Goobstation - Better snipers
     penetrateDamage: 200
     damagePenalty: 0.4
+  - type: SoundBlocker # Trauma
+    soundBlockPercent: 0.8
 
 - type: entity
   id: BlastDoorOpen
